--- a/StarwarsProject/starships/style.css
+++ b/StarwarsProject/starships/style.css
@@ -11,9 +11,16 @@ header, footer {
     display: flex;
 }
 
+.shipView {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
 .nav {
     border: solid 2px black;
     padding-right: 1rem;
+    background-color: #333333;
 }
 
 a {
