--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,49 +1,45 @@
 .pokeContainer {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.scene {
+width: 200px;
+height: 260px;
+border: 1px solid #CCC;
+margin: 10px;
+perspective: 600px;
 }
 
 .card {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 300px;
-    height: 300px;
-    margin: -150px;
-    perspective: 500px;
-  }
-  
-  .content {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 15px rgba(0,0,0,0.1);
-  
-    transition: transform 1s;
-    transform-style: preserve-3d;
-  }
-  
-  .card:hover .content {
-    transform: rotateY( 180deg ) ;
-    transition: transform 0.5s;
-  }
-  
-  .front,
-  .back {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: white;
-    line-height: 300px;
-    color: #03446A;
-    text-align: center;
-    font-size: 60px;
-    border-radius: 5px;
-    backface-visibility: hidden;
-  }
-  
-  .back {
-    background: #03446A;
-    color: white;
-    transform: rotateY( 180deg );
-  }
+width: 100%;
+height: 100%;
+transition: transform 1s;
+transform-style: preserve-3d;
+cursor: pointer;
+position: relative;
+}
+
+.card.is-flipped {
+transform: rotateY(180deg);
+}
+
+.card__face {
+position: absolute;
+width: 100%;
+height: 100%;
+color: white;
+text-align: center;
+font-size: 1.25rem;
+backface-visibility: hidden;
+}
+
+.card__face--front {
+background: red;
+}
+
+.card__face--back {
+background: blue;
+transform: rotateY(180deg);
+}
