--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,47 +1,60 @@
-.pokeContainer {
+header {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+}
+
+.pokeContainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    
 }
 
 .scene {
-width: 200px;
-height: 260px;
-border: 1px solid #CCC;
-margin: 10px;
-perspective: 600px;
+  width: 200px;
+  height: 260px;
+  border: 1px solid #CCC;
+  margin: 10px;
+  perspective: 600px;
+  border-radius: 30px;
 }
 
 .card {
-width: 100%;
-height: 100%;
-transition: transform 1s;
-transform-style: preserve-3d;
-cursor: pointer;
-position: relative;
-border-radius: 10px;
+  width: 100%;
+  height: 100%;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+  cursor: pointer;
+  position: relative;
+  
 }
 
 .card.is-flipped {
-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .card__face {
-position: absolute;
-width: 100%;
-height: 100%;
-color: white;
-text-align: center;
-font-size: 1.25rem;
-backface-visibility: hidden;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  color: white;
+  text-align: center;
+  font-size: .75rem;
+  backface-visibility: hidden;
+  border-radius: 30px;
 }
 
 .card__face--front {
-background: red;
+  background: red;
 }
 
 .card__face--back {
-background: blue;
-transform: rotateY(180deg);
+  background: blue;
+  transform: rotateY(180deg);
 }
 
+.card__face ul {
+  text-align: left;
+  list-style-type: square;
+}
