--- a/Pokemon/style.css
+++ b/Pokemon/style.css
@@ -1,7 +1,14 @@
+body {
+  background-color: orange;
+}
 header {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+h1 {
+  margin-bottom: .5rem;
 }
 
 .pokeContainer {
@@ -19,6 +26,7 @@ header {
   perspective: 600px;
   border-radius: 30px;
 }
+
 
 .card {
   width: 100%;
@@ -40,13 +48,14 @@ header {
   height: 100%;
   color: white;
   text-align: center;
-  font-size: .75rem;
+  font-size: 1rem;
   backface-visibility: hidden;
   border-radius: 30px;
 }
 
 .card__face--front {
   background: red;
+  border: 5px solid yellow;
 }
 
 .card__face--back {
