--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    position: fixed;
     background-color: red;
 }
 
@@ -78,6 +77,14 @@ a {
 
 i {
     font-size: 2rem;
+}
+
+.fa, .fab, .fad, .fal, .far, .fas {
+    margin: 10px;
+}
+
+.fab:hover, .fas:hover {
+    color: purple;
 }
 
 footer {
